--- a/styles/tree-view.less
+++ b/styles/tree-view.less
@@ -5,7 +5,7 @@
   background: @tree-view-background-color;
 
   .selected:before {
-    background: #444;
+    background: @tree-view-selected-bg;
     box-shadow: inset -3px 0 0 rgba(0,0,0, .05);
   }
 }
@@ -21,10 +21,10 @@
   box-shadow: inset -3px 0 0 rgba(0,0,0, .05);
 
   &:focus {
-    background: #282828;
+    background: @sidebar;
 
     .selected:before {
-      background: @background-color-selected;
+      background: @sidebar-focus;
     }
   }
 }
